[gd_scene load_steps=20 format=1]

[ext_resource path="res://Converted/Models/Terrain/Meshes.tres" type="MeshLibrary" id=1]
[ext_resource path="res://Scripts/map.gd" type="Script" id=2]
[ext_resource path="res://Converted/Textures/CubeDirt.tex" type="Texture" id=3]
[ext_resource path="res://Converted/Models/Terrain/Surface.msh" type="Mesh" id=4]
[ext_resource path="res://Converted/Textures/CubeGrass.tex" type="Texture" id=5]
[ext_resource path="res://Converted/Models/Terrain/Cube.msh" type="Mesh" id=6]
[ext_resource path="res://Scripts/camera.gd" type="Script" id=7]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=8]
[ext_resource path="res://Converted/Textures/LoliDrills.tex" type="Texture" id=9]
[ext_resource path="res://Converted/Models/Allies/LoliDrills3.msh" type="Mesh" id=10]
[ext_resource path="res://Converted/Textures/Bandit.tex" type="Texture" id=11]
[ext_resource path="res://Converted/Models/Enemies/Criminal2.msh" type="Mesh" id=12]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 1, 1, 1 )

[sub_resource type="FixedMaterial" id=2]

flags/visible = true
flags/double_sided = false
flags/invert_faces = false
flags/unshaded = false
flags/on_top = false
flags/lightmap_on_uv2 = true
flags/colarray_is_srgb = true
params/blend_mode = 0
params/depth_draw = 1
params/line_width = 0.0
fixed_flags/use_alpha = false
fixed_flags/use_color_array = false
fixed_flags/use_point_size = false
fixed_flags/discard_alpha = false
fixed_flags/use_xy_normalmap = false
params/diffuse = Color( 1, 1, 1, 1 )
params/specular = Color( 0, 0, 0, 1 )
params/emission = Color( 0, 0, 0, 1 )
params/specular_exp = 40
params/detail_mix = 1.0
params/normal_depth = 1
params/shader = 0
params/shader_param = 0.5
params/glow = 0
params/point_size = 1.0
uv_xform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
textures/diffuse = ExtResource( 3 )
textures/diffuse_tc = 0
textures/detail_tc = 0
textures/specular_tc = 0
textures/emission_tc = 0
textures/specular_exp_tc = 0
textures/glow_tc = 0
textures/normal_tc = 0
textures/shade_param_tc = 0

[sub_resource type="FixedMaterial" id=3]

flags/visible = true
flags/double_sided = false
flags/invert_faces = false
flags/unshaded = false
flags/on_top = false
flags/lightmap_on_uv2 = true
flags/colarray_is_srgb = true
params/blend_mode = 0
params/depth_draw = 1
params/line_width = -1.0
fixed_flags/use_alpha = false
fixed_flags/use_color_array = false
fixed_flags/use_point_size = false
fixed_flags/discard_alpha = false
fixed_flags/use_xy_normalmap = false
params/diffuse = Color( 1, 1, 1, 1 )
params/specular = Color( 0, 0, 0, 1 )
params/emission = Color( 0, 0, 0, 1 )
params/specular_exp = 40
params/detail_mix = 1.0
params/normal_depth = 1
params/shader = 0
params/shader_param = 0.5
params/glow = 0
params/point_size = 1.0
uv_xform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
textures/diffuse = ExtResource( 5 )
textures/diffuse_tc = 0
textures/detail_tc = 0
textures/specular_tc = 0
textures/emission_tc = 0
textures/specular_exp_tc = 0
textures/glow_tc = 0
textures/normal_tc = 0
textures/shade_param_tc = 0

[sub_resource type="FixedMaterial" id=4]

flags/visible = true
flags/double_sided = false
flags/invert_faces = false
flags/unshaded = false
flags/on_top = false
flags/lightmap_on_uv2 = true
flags/colarray_is_srgb = true
params/blend_mode = 0
params/depth_draw = 1
params/line_width = 0.0
fixed_flags/use_alpha = false
fixed_flags/use_color_array = false
fixed_flags/use_point_size = false
fixed_flags/discard_alpha = false
fixed_flags/use_xy_normalmap = false
params/diffuse = Color( 1, 1, 1, 1 )
params/specular = Color( 0, 0, 0, 1 )
params/emission = Color( 0, 0, 0, 1 )
params/specular_exp = 40
params/detail_mix = 1.0
params/normal_depth = 1
params/shader = 0
params/shader_param = 0.5
params/glow = 0
params/point_size = 1.0
uv_xform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
textures/diffuse = ExtResource( 3 )
textures/diffuse_tc = 0
textures/detail_tc = 0
textures/specular_tc = 0
textures/emission_tc = 0
textures/specular_exp_tc = 0
textures/glow_tc = 0
textures/normal_tc = 0
textures/shade_param_tc = 0

[sub_resource type="BoxShape" id=5]

extents = Vector3( 1, 1, 1 )

[sub_resource type="FixedMaterial" id=6]

flags/visible = true
flags/double_sided = false
flags/invert_faces = false
flags/unshaded = false
flags/on_top = false
flags/lightmap_on_uv2 = true
flags/colarray_is_srgb = true
params/blend_mode = 0
params/depth_draw = 1
params/line_width = -1.0
fixed_flags/use_alpha = false
fixed_flags/use_color_array = false
fixed_flags/use_point_size = false
fixed_flags/discard_alpha = false
fixed_flags/use_xy_normalmap = false
params/diffuse = Color( 1, 1, 1, 1 )
params/specular = Color( 0, 0, 0, 1 )
params/emission = Color( 0, 0, 0, 1 )
params/specular_exp = 40
params/detail_mix = 1.0
params/normal_depth = 1
params/shader = 0
params/shader_param = 0.5
params/glow = 0
params/point_size = 1.0
uv_xform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
textures/diffuse = ExtResource( 9 )
textures/diffuse_tc = 0
textures/detail_tc = 0
textures/specular_tc = 0
textures/emission_tc = 0
textures/specular_exp_tc = 0
textures/glow_tc = 0
textures/normal_tc = 0
textures/shade_param_tc = 0

[sub_resource type="FixedMaterial" id=7]

flags/visible = true
flags/double_sided = false
flags/invert_faces = false
flags/unshaded = false
flags/on_top = false
flags/lightmap_on_uv2 = true
flags/colarray_is_srgb = true
params/blend_mode = 0
params/depth_draw = 1
params/line_width = -1.0
fixed_flags/use_alpha = false
fixed_flags/use_color_array = false
fixed_flags/use_point_size = false
fixed_flags/discard_alpha = false
fixed_flags/use_xy_normalmap = false
params/diffuse = Color( 1, 1, 1, 1 )
params/specular = Color( 0, 0, 0, 1 )
params/emission = Color( 0, 0, 0, 1 )
params/specular_exp = 40
params/detail_mix = 1.0
params/normal_depth = 1
params/shader = 0
params/shader_param = 0.5
params/glow = 0
params/point_size = 1.0
uv_xform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
textures/diffuse = ExtResource( 11 )
textures/diffuse_tc = 0
textures/detail_tc = 0
textures/specular_tc = 0
textures/emission_tc = 0
textures/specular_exp_tc = 0
textures/glow_tc = 0
textures/normal_tc = 0
textures/shade_param_tc = 0

[node name="Battle" type="Spatial"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="KinematicBody" type="KinematicBody" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 43.0585, 0, 0, 0, 9, 0, 0, 0, 43.0585, 0, 2.48149, 0.914854 )
input/ray_pickable = true
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Transform( 0.235846, 0, 0, 0, 0.107379, 0, 0, 0, 0.235846, 0, -0.0134385, -0.0241316 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collide_with/static = true
collide_with/kinematic = true
collide_with/rigid = true
collide_with/character = true
collision/margin = 0.001

[node name="GridMap" type="GridMap" parent="KinematicBody"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.0232242, 0, 0, 0, 0.111111, 0, 0, 0, 0.0232242, 0, -0.275721, -0.0212468 )
theme/theme = ExtResource( 1 )
theme/bake = false
lighting/bake = false
cell/size = 2.0
cell/octant_size = 4
cell/center_x = true
cell/center_y = true
cell/center_z = true
cell/scale = 1.0
data = {
"cells": IntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 65531, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 65531, 1, 0, 65532, 1, 0, 65533, 1, 0, 65534, 1, 0, 65535, 1, 0, 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 65531, 2, 0, 65532, 2, 0, 65533, 2, 0, 65534, 2, 0, 65535, 2, 0, 0, 3, 0, 1, 3, 0, 2, 3, 0, 3, 3, 0, 4, 3, 0, 65531, 3, 0, 65532, 3, 0, 65533, 3, 0, 65534, 3, 0, 65535, 3, 0, 0, 4, 0, 1, 4, 0, 2, 4, 0, 3, 4, 0, 4, 4, 0, 65531, 4, 0, 65532, 4, 0, 65533, 4, 0, 65534, 4, 0, 65535, 4, 0, 0, 65531, 0, 1, 65531, 0, 2, 65531, 0, 3, 65531, 0, 4, 65531, 0, 65531, 65531, 0, 65532, 65531, 0, 65533, 65531, 0, 65534, 65531, 0, 65535, 65531, 0, 0, 65532, 0, 1, 65532, 0, 2, 65532, 0, 3, 65532, 0, 4, 65532, 0, 65531, 65532, 0, 65532, 65532, 0, 65533, 65532, 0, 65534, 65532, 0, 65535, 65532, 0, 0, 65533, 0, 1, 65533, 0, 2, 65533, 0, 3, 65533, 0, 4, 65533, 0, 65531, 65533, 0, 65532, 65533, 0, 65533, 65533, 0, 65534, 65533, 0, 65535, 65533, 0, 0, 65534, 0, 1, 65534, 0, 2, 65534, 0, 3, 65534, 0, 4, 65534, 0, 65531, 65534, 0, 65532, 65534, 0, 65533, 65534, 0, 65534, 65534, 0, 65535, 65534, 0, 0, 65535, 0, 1, 65535, 0, 2, 65535, 0, 3, 65535, 0, 4, 65535, 0, 65531, 65535, 0, 65532, 65535, 0, 65533, 65535, 0, 65534, 65535, 0, 65535, 65535, 0 )
}
script/script = ExtResource( 2 )
__meta__ = {
"_editor_clip_": 0,
"_editor_floor_": Vector3( 0, 1, 0 )
}

[node name="CollisionShape" type="CollisionShape" parent="KinematicBody"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.235846, 0, 0, 0, 0.107379, 0, 0, 0, 0.235846, 0, -0.0134385, -0.0241316 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Ground" type="MeshInstance" parent="."]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.539325, 0 )
visibility/visible = false
layers = 1
geometry/visible = true
geometry/material_override = SubResource( 2 )
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
mesh/mesh = ExtResource( 4 )
mesh/skeleton = NodePath("..")
material/0 = null

[node name="Grass" type="MeshInstance" parent="Ground"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.539325, 0 )
visibility/visible = false
layers = 1
geometry/visible = true
geometry/material_override = SubResource( 3 )
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
mesh/mesh = ExtResource( 6 )
mesh/skeleton = NodePath("..")
material/0 = null

[node name="Dirt" type="MeshInstance" parent="Ground"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.539325, 0 )
visibility/visible = false
layers = 1
geometry/visible = true
geometry/material_override = SubResource( 4 )
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
mesh/mesh = ExtResource( 6 )
mesh/skeleton = NodePath("..")
material/0 = null

[node name="Camera1" type="Camera" parent="."]

process/pause_mode = 1
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.700732, -0.383465, 0.601607, 0.0044085, 0.845576, 0.533837, -0.713412, -0.371423, 0.594212, 17, 17, 17 )
projection = 0
fov = 50.0
near = 0.1
far = 100.0
keep_aspect = 1
current = true
visible_layers = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
script/script = ExtResource( 7 )

[node name="Camera2" type="Camera" parent="."]

process/pause_mode = 1
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( -0.709751, -0.366502, 0.601607, -0.00709427, 0.85768, 0.514134, -0.704418, 0.360639, -0.611339, 17, 17, -15 )
projection = 0
fov = 50.0
near = 0.1
far = 100.0
keep_aspect = 1
current = false
visible_layers = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0

[node name="Camera3" type="Camera" parent="."]

process/pause_mode = 1
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.727708, 0.375774, -0.57379, -0.0230024, 0.849466, 0.527142, 0.685502, -0.370406, 0.626807, -17, 17, 17 )
projection = 0
fov = 50.0
near = 0.1
far = 100.0
keep_aspect = 1
current = false
visible_layers = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0

[node name="Camera4" type="Camera" parent="."]

process/pause_mode = 1
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( -0.709751, 0.366502, -0.601607, 0.00709427, 0.85768, 0.514134, 0.704418, 0.360639, -0.611339, -17, 17, -16 )
projection = 0
fov = 50.0
near = 0.1
far = 100.0
keep_aspect = 1
current = false
visible_layers = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0

[node name="DirectionalLight" type="DirectionalLight" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 0.752966, 0.658059, 0, -0.658059, 0.752966, 0, 19.6873, 18.9587 )
layers = 1
params/enabled = true
params/editor_only = false
params/bake_mode = 0
params/energy = 1.5
colors/diffuse = Color( 1, 1, 1, 1 )
colors/specular = Color( 1, 1, 1, 1 )
shadow/shadow = false
shadow/darkening = 0.0
shadow/z_offset = 0.05
shadow/z_slope_scale = 0.0
shadow/esm_multiplier = 60.0
shadow/blur_passes = 1.0
projector = null
operator = 0
shadow/mode = 0
shadow/max_distance = 0.0
shadow/split_weight = 0.5
shadow/zoffset_scale = 2.0

[node name="Allies" type="Node" parent="."]

[node name="Ally1" type="KinematicBody" parent="Allies"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( -3, 0, -2.62268e-07, 0, 5, 0, 2.62268e-07, 0, -3, 0, 4.6, 9 )
input/ray_pickable = true
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Transform( 0.331147, 0, 1.77636e-15, 0, 0.3, 0, -1.77636e-15, 0, 0.331147, 0, 0.0644534, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collide_with/static = true
collide_with/kinematic = true
collide_with/rigid = true
collide_with/character = true
collision/margin = 0.001
script/script = ExtResource( 8 )

[node name="CollisionShape" type="CollisionShape" parent="Allies/Ally1"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.331147, 0, 1.77636e-15, 0, 0.3, 0, -1.77636e-15, 0, 0.331147, 0, 0.0644534, 0 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="Loli" type="MeshInstance" parent="Allies/Ally1"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.333333, 0, 3.55271e-15, 0, 0.2, 0, -3.55271e-15, 0, 0.333333, 0, -0.251848, 0 )
layers = 1
geometry/visible = true
geometry/material_override = SubResource( 6 )
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
mesh/mesh = ExtResource( 10 )
mesh/skeleton = NodePath("..")
material/0 = null
material/1 = null
material/2 = null

[node name="Enemies" type="Node" parent="."]

[node name="Enemy1" type="KinematicBody" parent="Enemies"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 3, 0, -2.61799e-07, 0, 5, 0, 2.61799e-07, 0, 3, 0, 4.6, -9 )
input/ray_pickable = true
input/capture_on_drag = false
shape_count = 1
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Transform( 0.331147, 0, 1.77636e-15, 0, 0.3, 0, -1.77636e-15, 0, 0.331147, 0, 0.0644534, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collide_with/static = true
collide_with/kinematic = true
collide_with/rigid = true
collide_with/character = true
collision/margin = 0.001
script/script = ExtResource( 8 )

[node name="Criminal" type="MeshInstance" parent="Enemies/Enemy1"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.333333, 0, 1.77636e-15, 0, 0.2, 0, -1.77636e-15, 0, 0.333333, 0, -0.251848, 0 )
layers = 1
geometry/visible = true
geometry/material_override = SubResource( 7 )
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
mesh/mesh = ExtResource( 12 )
mesh/skeleton = NodePath("..")
material/0 = null
material/1 = null

[node name="CollisionShape" type="CollisionShape" parent="Enemies/Enemy1"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.331147, 0, 1.77636e-15, 0, 0.3, 0, -1.77636e-15, 0, 0.331147, 0, 0.0644534, 0 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[connection signal="input_event" from="KinematicBody" to="KinematicBody/GridMap" method="_on_KinematicBody_input_event"]

[connection signal="input_event" from="Allies/Ally1" to="KinematicBody/GridMap" method="_on_Ally1_input_event"]

[connection signal="input_event" from="Enemies/Enemy1" to="KinematicBody/GridMap" method="_on_Enemy1_input_event"]


